# su2_vpf

./: .gitignore  README.md  pyproject.toml  run_analysis.py
config/: analysis_config.yaml  engine_parameters.yaml
src/su2_analysis/: config.py  config_loader.py  settings.py
src/su2_analysis/adapters/su2/: config_writer.py  mesh_generator.py  su2_parser.py  su2_runner.py
src/su2_analysis/pipeline/: contracts.py
src/su2_analysis/shared/: atmosphere.py  plot_style.py  progress.py
src/su2_analysis/stage1_airfoil_selection/: airfoil_selection_service.py  scoring.py
src/su2_analysis/stage2_su2_simulations/: final_analysis_service.py  pitch_map.py
src/su2_analysis/stage4_performance_metrics/: metrics.py
src/su2_analysis/stage5_pitch_kinematics/application/: run_pitch_kinematics.py
src/su2_analysis/stage5_pitch_kinematics/core/services/: blade_twist_service.py  cascade_correction_service.py  kinematics_service.py  optimal_incidence_service.py  pitch_adjustment_service.py  rotational_correction_service.py  stage_loading_service.py
src/su2_analysis/stage7_sfc_analysis/application/: run_sfc_analysis.py
src/su2_analysis/stage7_sfc_analysis/core/services/: mission_analysis_service.py  propulsion_model_service.py  sfc_analysis_service.py
tools/: preview_mesh.py
