[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "su2-vpf"
version = "0.1.0"
description = "Variable Pitch Fan aerodynamic analysis pipeline using SU2 RANS"
requires-python = ">=3.10"
dependencies = [
    "gmsh",
    "numpy",
    "pandas",
    "matplotlib",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["src"]
